Sat Dec  8 09:39:48 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/OS.cpp (string_to_argv): Improved the support for quoted strings.
	  Thanks to Kevin Burge <kevin.burge@systemware.com> for reporting
 	  this.

	* ace/Profile_Timer.cpp,
	  ace/OS.i,
	  ace/OS.h,
	  ace/OS.cpp,
	  ace/High_Res_Timer.i,
	  ace/High_Res_Timer.cpp,
	  ace/config-win32-ghs.h,
	  ace/config-win32-common.h: Added improved support for ACE_LACKS_LONGLONG_T.
	  Thanks to Alain Decamps for contributing this.

Fri Dec  7 07:57:12 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/OS.cpp (cond_timedwait): Fixed a bug in the WinCE semaphore
	  simulation version of ACE_OS::cond_timedwait().  Thanks to
 	  Michael Graf <mg@leutek.de> for helping to find this.

Fri Dec 07 14:28:33 2001  Carlos O'Ryan  <coryan@uci.edu>

	* tests/ACE_Init_Test.cpp:
	* tests/ACE_Init_TestDlg.cpp:
	  Fix order of #includes to work under unicode builds.

Fri Dec 07 15:42:44 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Registry_Name_Space.cpp: Changed to conditionally use
	  char_rep for binding/unbinding/resolving name bindings.  This is
	  because ACE_CString and ACE_WString no longer allow
	  initialization with different string type.

Fri Dec  7 10:22:25 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_SOCK_Stream.i (close):

	  Do not invalidate the handle when closing the
	  ACE_SSL_SOCK_Stream.  Doing so causes subtle side-effects when a
	  reactor invokes an event handler that uses a shutdown
	  ACE_SSL_SOCK_Stream.  For example, if an SSL handshake fails
	  then the stream andle will be invalidated.  This prevents the
	  ACE_SSL_Accept_Handler from being removed from the reactor.
	  Later when handle_events() is called the reactor will attempt
	  to call the ACE_SSL_Accept_Handler with the shutdown
	  ACE_SSL_SOCK_Stream, which appears to cause an access violation
	  on Windows, and a "hang" on Unix platforms.  Thanks to Vladimir